# MAS_For_Finance

./: .env  .gitignore  README.md  RUN_DEMO.sh  pyproject.toml  test.py
configs/: README.md  agents.yaml  btc4h.yaml  default.yaml  multi_asset.yaml  news_urls.txt
configs/single/: btc.yaml  doge.yaml  eth.yaml  sol.yaml  xrp.yaml
dashboard/: README.md  tailwind.config.js
data/: btc_4h.csv  news_macro.json  news_micro.json  prices_BTC-USD_4h.csv
data_pipeline/: __init__.py
data_pipeline/news/: __init__.py  aggregation.py  enrichment.py  llm_prompt_search.py  multi_asset_queries.py  sources.py
data_pipeline/pipeline/: __init__.py  cross_features.py  data_pipeline.py  multi_asset.py
docs/: ARCHITECTURE.md
mas_finance/: README.md  __init__.py  cli.py  config.py
mas_finance/agents/: analyst.py  base.py  compose.py  evaluator.py  researcher.py  risk.py  trader.py
mas_finance/dto/: types.py
mas_finance/inventories/: __init__.py  analyst_feature.py  analyst_trend.py  interfaces.py  registry.py  researcher_calibration.py  researcher_forecast.py  researcher_uncertainty.py  risk_checks.py  trader_style.py
mas_finance/orchestrator/: graph.py
mas_finance/tools/: news_filter.py
paper/: README.md  neurips_2026.tex  system_walkthrough.tex
scripts/: run_pipeline.py
src/core/: data_pipeline.py  schemas.py
src/news/: llm_prompt_search.py
src/trading_agents_phase1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_knowledge_transfer.py  test_method_selection.py  test_workflow_mock.py
trading_agents/: __init__.py  cli.py  models.py  workflow.py
trading_agents/agents/: __init__.py  admin.py  analyst.py  base.py  (+4 more)
(+69 files in other folders)
