[project]
name = "trading-agents-phase1"
version = "0.4.0"
description = "Multi-Agent LLM Financial Trading System with Admin & Paper Trading"
authors = [{name="Yuhao Li", email="li88@sas.upenn.edu"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "python-dateutil",
    "pydantic>=2.0,<3.0",
    "pyyaml",
    "matplotlib",
    "requests",
    "ccxt",
    "python-dotenv",
    "openai",
    "beautifulsoup4",
    "backtrader",
]

[project.optional-dependencies]
# Paper trading with Bybit Testnet
paper-trading = [
    "aiohttp>=3.9",
    "websockets>=12.0",
]
# Slack notifications
notifications = [
    "slack-sdk>=3.26",
]
# All optional features
all = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "slack-sdk>=3.26",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trading_agents*", "data_pipeline*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
